# python-for-coding-test

./: README.md  pyproject.toml
code_up_basic_100/: 6081.py  6081_16진수_구구단_출력하기.py  6082_3_6_9_게임의_왕이_되자.py  6084.py  6085_그림_파일_저장용량_계산하기.py  6086_거기까지!_이제_그만~.py  6088.py  6090_수_나열하기_3.py  6092.py  6092_이상한_출석_번호_부르기_1.py  6093.py  6093_이상한_출석_번호_부르기_2.py  6094_이상한_출석_번호_부르기_3.py  6095_바둑판에_흰_돌_놓기.py  6096_바둑알_십자_뒤집기.py  6097_설탕과자_뽑기.py  6098_성실한_개미.py
leetcode/: 104_maximum_depth_of_binary_tree.py  1_two_sum.py  200_number_of_islands.py  20_valid_parentheses.py  32_longest_valid_parentheses.py  344_reverse_string.py  42_trapping_rain_water.py  46_permutations.py  60_permutation_sequence.py  739_daily_temperatures.py  daily_temperatures.py  design_browser_history.py  longest_consecutive_sequence.py  lowest_common_ancestor_of_a_binary_tree.py  two_sum.py  two_sum_완전탐색.py  valid_parentheses.py
programmers/: 문자열_나누기.py  점_찍기.py
week1/: asm2_palindrome_partitioning.py  asm3_sudoku_solver.py  ex3_permutations.py  ex4_combinations.py  std1_partition_array_into_two_arrays_to_minimize_sum_difference.py
week2/: asm1_두_큐_합_같게_만들기.py  asm2_trapping_rain_water.py  asm5_is_graph_bipartite.py  ex3_daily_temperatures.py  std1_캐시.py  std2_행렬과_연산.py
week3/: asm1_연구소.py  asm2_연구소3.py  asm3_구슬_탈출.py  asm_구슬_탈출.py  asm_연구소.py  asm_연구소3.py  ex2_shortest_path_in_binary_matrix.py  ex_number_of_islands.py  ex_shortest_path_in_binary_matrix.py
week4/: asm1_디스크_컨트롤러.py  asm6_course_schedule2.py  ex2_course_schedule.py
week5/: asm3_group_anagrams.py  asm4_신고_결과_받기.py  ex1_two_sum.py  (+1 more)
(+32 files in other folders)
